--- a/client/src/components/layout/MainNavigation.module.css
+++ b/client/src/components/layout/MainNavigation.module.css
@@ -1,10 +1,15 @@
+.main {
+  margin: 1rem 2rem;
+  width: 95%;
+    }
+
 .header {
-    width: 100%;
-    height: 1rem;
-    display: flex;
-    padding: 3% 3%;
+  max-width: 100%;
+  margin: auto;
+  padding: 2rem;
     justify-content:space-evenly;
     align-items: center;
+    display: flex;
     
     background-color: #8b005d;
     margin-bottom: 1rem;
@@ -19,11 +24,11 @@
     list-style: none;
     display: flex;
     margin: 0;
-    padding: 0;
+    
   }
   
   .nav li {
-    margin-left: 2.5rem;
+    margin-left: 3.5rem;
     font-size: 1.25rem;
   }
   
@@ -31,6 +36,7 @@
     text-decoration: none;
     color: rgb(255, 237, 253);
     padding: 6px;
+   vertical-align: middle;
   }
   
   .nav a:hover {
@@ -44,3 +50,20 @@ background-color: rgba(218, 218, 217, 0.432);
     text-decoration: underline;
    
   }
+
+  .btnLogout{
+
+    font: inherit;
+  
+    padding: 0.1rem;
+    border: none;
+    color: white;
+    background-color: #8b005d;
+    box-shadow: none;
+    cursor: pointer;
+}
+  
+.btnLogout :hover{
+  color: white;
+  background-color: rgba(218, 218, 217, 0.432);
+}
