--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -2,21 +2,30 @@ html, body {
   height: 100%;
 }
 
+
 .container{
   overflow: hidden;
   width: 100%;
   justify-content:space-evenly;
-  align-items: center;
+  align-content: space-around;
+align-items: center;
+
+
   display: inline-block;
  
 }
 
+
+
+
+
 .form-control {
-margin: 0.2rem;
-display: inline;
+
+display: flex;
+justify-content: center;
 }
 
-.form-control button {
+.btn {
   
   font: inherit;
   padding: 0.5rem 1.5rem;
@@ -27,7 +36,7 @@ display: inline;
   cursor: pointer;
 }
 
-.form-control.invalid button {
+.btn.invalid {
   font: inherit;
   padding: 0.5rem 1.5rem;
   border: 1px solid  #8b005d;
@@ -38,8 +47,8 @@ display: inline;
 }
 
 
-.form-control button:hover,
-.form-control button:active {
+.btn:hover,
+.btn:active {
   background:  #8b005da2;
   border-color: #8b005da2;
   color: #000;
