--- a/client/src/components/layout/MainNavigation.module.css
+++ b/client/src/components/layout/MainNavigation.module.css
@@ -6,6 +6,7 @@
 .header {
   max-width: 100%;
   margin: auto;
+  margin-bottom: 0%;
   padding: 2rem;
     justify-content:space-evenly;
     align-items: center;
